samples/_failures_safe/1761469350_910d0b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81ae7df0.c: In function ‘main’:
./samples/SAFE/__tmp_81ae7df0.c:152:5: error: expected expression at end of input
  152 |     if (fgets(input_text, sizeof(input_text), stdin) == NULL)
      |     ^~
./samples/SAFE/__tmp_81ae7df0.c:152:5: error: expected declaration or statement at end of input
